--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"    rel="stylesheet">
+    
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portal de Notícias</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/index.css" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"    rel="stylesheet">
   </head>
   <body>
-    Alô
+    <h1>asouidhasoiudn</h1>
+    <h2>aiosujbdapsidb</h2>
+    <h3>asoiudhnaspidn</h3>
+    <a href="#">ALOASD</a>
   </body>
 </html>
