--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portal de Notícias</title>
     <link rel="stylesheet" href="styles/index.css" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"    rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="container">
       <nav id="primary" class="grid grid-flow-col">
         <div>
-          <img src="./assets/icons/List.svg" alt="ícone de menu">
+          <img src="./assets/icons/List.svg" alt="ícone de menu" />
           <strong>Menu</strong>
         </div>
 
         <div>
-          <img src="./assets/logo.svg" alt="TechNews logo">
+          <img src="./assets/logo.svg" alt="TechNews logo" />
         </div>
 
         <div>
           <strong>Buscar</strong>
-          <img src="./assets/icons/MagnifyingGlass.svg" alt="ícone de lupa para pesquisa">
+          <img
+            src="./assets/icons/MagnifyingGlass.svg"
+            alt="ícone de lupa para pesquisa"
+          />
         </div>
       </nav>
 
@@ -37,8 +42,34 @@
         <a href="#">Internet</a>
         <a href="#">Vestíveis</a>
         <a href="#">Realidade Aumentada</a>
-        <a href="#">Realidade  Virtual</a>
+        <a href="#">Realidade Virtual</a>
       </nav>
     </header>
+
+    <main class="conatiner grid">
+      <section id="featured" class="grid grid-flow-col gap-16">
+        <div>
+          <img src="assets/images/Image 01.png" alt="" />
+        </div>
+
+        <div class="grid grid-cols2 gap-16">
+          <div>
+            <img src="assets/images/Image 02.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/images/Image 03.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/images/Image 04.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/images/Image 05.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
