--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <main class="conatiner grid">
       <section id="featured" class="grid grid-flow-col gap-16">
-        <div>
+        <div class="card">
           <img src="assets/images/Image 01.png" alt="" />
         </div>
 
