--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <img src="./assets/icons/List.svg" alt="ícone de menu" />
           <strong>Menu</strong>
         </div>
-
         <div>
           <img src="./assets/logo.svg" alt="TechNews logo" />
         </div>
@@ -48,9 +47,16 @@
 
     <main class="conatiner grid">
       <section id="featured" class="grid grid-flow-col gap-16">
-        <div class="card">
+        <figure class="card">
           <img src="assets/images/Image 01.png" alt="" />
-        </div>
+
+          <figcaption>
+            <span class="content-tag">Robótica</span>
+            <h2 class="text-xl">
+              Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
+            </h2>
+          </figcaption>
+        </figure>
 
         <div class="grid grid-cols2 gap-16">
           <div>
