aplicando estilos na seão mais lidas na semana

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </nav>
     </header>
 
-    <main class="conatiner grid">
+    <main class="container grid">
       <section id="featured" class="grid grid-flow-col gap-16">
         <figure class="card">
           <img src="assets/images/Image 01.png" alt="Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências." />
